temp/apps/admin/console/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: admin-ingressroute
  namespace: admin
spec:
  routes:
    - kind: Rule
      match: Host(`admin.ryanschnabel.com`) && PathPrefix(`/bff`)
      services:
      - kind: Service
        name: admin-bff
        port: 80

    - kind: Rule
      match: Host(`admin.ryanschnabel.com`) && !PathPrefix(`/bff`)
      services:
      - kind: Service
        name: admin-console
        port: 80
      middlewares:
      - name: traefik-forward-auth
